Embed old version of underscore.js lib

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <a style="color:white; position:absolute; bottom:0; left: 10px;" href="http://www.eclassical.com/pages/24-bit-faq.html">Audio samples source</a>
 
-    <script src="http://underscorejs.org/underscore-min.js"></script>
+    <script src="/js/underscore-min.js"></script>
 
     <script src="audiocogs/aurora.js"></script>
     <script src="audiocogs/flac.js"></script>
